# poetry-plugin-tweak-dependencies-version

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  .snyk  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  zzz_poetry_plugin_tweak_dependencies_version.pth
.github/: publish.yaml  renovate.json5
.github/workflows/: auto-merge.yaml  codeql.yaml  main.yaml
ci/: config.yaml  requirements.txt
example/: pyproject.toml
poetry_plugin_tweak_dependencies_version/: __init__.py
