[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
name = "poetry-plugin-tweak-dependencies-version"
version = "0.1.0"
description = "Poetry plugin used to tweak dependency versions"
readme = "README.md"
repository = "https://github.com/sbrunner/poetry-plugin-tweak-dependencies-version"
keywords = ["poetry", "plugin", "version", "versioning", "dynamic"]
authors = ["Stéphane Brunner <stephane.brunner@camptocamp.com>"]
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Plugins',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
packages = [{ include = "poetry_plugin_tweak_dependencies_version" }, { include = "poetry_plugin_tweak_dependencies_version/py.typed" }]

[tool.poetry.dependencies]
python = ">=3.9.2,<3.14"
poetry = "==2.0.*"
idna = "3.10"
cryptography = "44.0.1"
urllib3 = "2.3.0"
certifi = "2025.1.31"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.14.1", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.4"
prospector-profile-utils = "1.20.2"

[tool.poetry.plugins."poetry.application.plugin"]
tweak_dependencies_version = "poetry_plugin_tweak_dependencies_version:Plugin"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-drop-python-upper-constraint", "poetry-plugin-tweak-dependencies-version"]
build-backend = "poetry.core.masonry.api"
