[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
poetry = "==2.1.3"
idna = "3.10"
cryptography = "45.0.5"
urllib3 = "2.5.0"
certifi = "2025.6.15"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.2", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.23.0"

[tool.poetry.plugins."poetry.application.plugin"]
tweak_dependencies_version = "poetry_plugin_tweak_dependencies_version:Plugin"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
dynamic = ["dependencies", "version"]
name = "poetry-plugin-tweak-dependencies-version"
description = "Poetry plugin used to tweak dependency versions"
readme = "README.md"
keywords = ["poetry", "plugin", "version", "versioning", "dynamic"]
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Plugins',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@camptocamp.com"}]
packages = [{ include = "poetry_plugin_tweak_dependencies_version" }, { include = "poetry_plugin_tweak_dependencies_version/py.typed" }]
requires-python = ">=3.10"
dependencies = ["poetry", "idna", "cryptography", "urllib3", "certifi", "requests==2.32.4"]

[project.urls]
repository = "https://github.com/sbrunner/poetry-plugin-tweak-dependencies-version"
"Bug Tracker" = "https://github.com/sbrunner/poetry-plugin-tweak-dependencies-version/issues"

[build-system]
requires = ["poetry-core==2.1.3", "poetry-dynamic-versioning==1.8.2", "poetry-plugin-drop-python-upper-constraint==1.0.0", "poetry-plugin-tweak-dependencies-version===1.5.2"]
build-backend = "poetry.core.masonry.api"
