[tool.black]
line-length = 110
target-version = ['py38']

[tool.poetry]
name = "example"
version = "0.1.0"
description = "Example"
authors = ["Stéphane Brunner <stephane.brunner@camptocamp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aaaaa = "1.2.3"
bbbbb = "1.2.3"
ccccc = "1.2.3"
ddddd = "1.2.3"


[build-system]
requires = ["poetry-core==1.0.7"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-tweak-dependencies-version]
aaaaa = "major"
bbbbb = "minor"
ccccc = "patch"
