[tool.black]
line-length = 110
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.poetry]
name = "example"
version = "0.1.0"
description = "Example"
authors = ["Stéphane Brunner <stephane.brunner@camptocamp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mm_mm = "1"
mm_m = "1"
mm_p = "1"
mm_f = "1"
m_mm = "1.2"
m_m = "1.2"
m_p = "1.2"
m_f = "1.2"
p_mm = "1.2.3"
p_m = "1.2.3"
p_p = "1.2.3"
p_f = "1.2.3"
dev_mm = "1.0.0.dev4"
dev_m = "1.2.0.dev4"
dev_p = "1.2.3.dev4"
dev_f = "1.2.3.dev4"
post_mm = "1.0.0.post5"
post_m = "1.2.0.post5"
post_p = "1.2.3.post5"
post_f = "1.2.3.post5"
set = "1.2.3"
present = "1.2.3"
t1 = ">=1.2.3,<2.0.0"
t2 = ">=1.2.3,<2.4.5"
t3 = "1.*"
optional = { version = "1.2.3", optional = true }

[tool.poetry.extras]
all = ["optional"]

[build-system]
requires = ["poetry-core==1.0.7"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"
mm_mm = "major"
m_mm = "major"
p_mm = "major"
dev_mm = "major"
post_mm = "major"
mm_m = "minor"
m_m = "minor"
p_m = "minor"
dev_m = "minor"
post_m = "minor"
mm_p = "patch"
m_p = "patch"
p_p = "patch"
dev_p = "patch"
post_p = "patch"
mm_f = "full"
m_f = "full"
p_f = "full"
dev_f = "full"
post_f = "full"
set = "4.5.6"
present = "present"
t2 = "full"
